Pushed from Locofy Builder

--- a/index.html
+++ b/index.html
@@ -1,1 +1,224 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="initial-scale=1, width=device-width"><link rel="stylesheet" href="component.a76bfe90.css"><link rel="stylesheet" href="index.f684b6a6.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source Sans Pro:wght@400;500&display=swap"></head><body> <article class="doc-starter"> <div class="doc-header"> <div class="parent"> <div class="div">组件库</div> <img class="arrow-right-icon" alt src="arrowright.5be98f6e.svg"> <div class="div">展示</div> <img class="arrow-right-icon" alt src="arrowright.5be98f6e.svg"> <div class="tag">Tag</div> </div> <div class="group"> <div class="div">最新维护：2022-06-02</div> <div class="div">负责人：卢珊</div> <div class="docstatus"> <div class="div">✏️ 撰写文档中</div> </div> </div> </div> <div class="doc-defination"> <div class="title"> <div class="div4"> <div class="tag1">标签 Tag</div> <div class="div5">使用标签来标记、分类内容</div> </div> <div class="div6"> <img class="link-icon" alt src="link.d282e7f6.svg"> <a class="a" href="https://www.figma.com/file/AItcK3Oz6wngtyKJ6e138e/?node-id=2%3A2" target="_blank">点击前往组件</a> </div> </div> <div class="component-showcase"> <div class="tag-parent"> <div class="tag2"> <img class="analysis-icon" alt src="analysis.fa05b193.svg"> <div class="text1">标签</div> </div> <div class="tag3"> <img class="delete-2-fill-icon" alt src="delete2fill.1840a871.svg"> <div class="text1">执行失败</div> </div> <div class="tag4"> <img class="delete-2-fill-icon" alt src="infofill.e5fa4d7b.svg"> <div class="text1">运行中</div> </div> <div class="tag5"> <img class="delete-2-fill-icon" alt src="delete2fill1.cce41c68.svg"> <div class="text1">已失效</div> </div> <div class="tag6"> <img class="delete-2-fill-icon" alt src="successfill.a4f5bbfb.svg"> <div class="text1">已完成</div> </div> <div class="tag7"> <img class="analysis-icon" alt src="error2fill.4311ad8e.svg"> <div class="text1">异常</div> </div> </div> </div> <div class="component-define"> <div class="div7"> <p class="p">可以使用多个或单个标签对内容进行分类。</p> <p class="p">标签帮助用户快速识别内容，吸引用户注意力。</p> </div> </div> </div> <div class="doc-breakdown"> <div class="div8">组件解构</div> <div class="frame-parent"> <div class="frame-group"> <div class="frame-container"> <div class="docnumber-parent"> <div class="docnumber"> <img class="oval-icon" alt src="oval.60256b33.svg"> <div class="div9">1</div> </div> <div class="div10">图标（可选）</div> </div> <div class="div11">用于辅助展示标签信息，起强调作用</div> </div> <div class="frame-div"> <div class="docnumber-parent"> <div class="docnumber"> <img class="oval-icon" alt src="oval.60256b33.svg"> <div class="div9">2</div> </div> <div class="div10">标签内容</div> </div> <div class="div11">标签内容尽可能简短</div> </div> <div class="frame-parent1"> <div class="docnumber-parent"> <div class="docnumber"> <img class="oval-icon" alt src="oval.60256b33.svg"> <div class="div9">3</div> </div> <div class="div10">关闭按钮 (可选)</div> </div> <div class="div17">可以含有关闭按钮，点击后移除标签</div> </div> </div> <img class="image-1-icon" alt src="image-1@2x.28837d9f.png"> </div> </div> <div class="doc-breakdown"> <div class="wrapper"> <div class="div8">标签的类型</div> </div> <div class="frame-parent2"> <div class="image-1-parent"> <img class="image-1-icon1" alt src="image-11@2x.1599d884.png"> <div class="frame-parent3"> <div class="container"> <div class="div">标签按语义分类</div> <div class="type-default-danger"> type: default danger info invalid success warning </div> </div> <div class="div20">每个标签都需要在特定的场景下使用</div> <div class="default-parent"> <div class="default"> <ul class="default1"> 无需强调的默认信息使用 default 类型 </ul> </div> <div class="default"> <ul class="default1"> 危险状态使用红色 danger 类型 </ul> </div> <div class="default"> <ul class="default1"> 需强调信息时使用蓝色 info 类型 </ul> </div> <div class="default"> <ul class="default1"> 失效状态使用灰色 invalid 类型 </ul> </div> <div class="default"> <ul class="default1"> 积极状态使用绿色 success 类型 </ul> </div> <div class="default"> <ul class="default1"> 异常状态使用橙色 warning 类型 </ul> </div> </div> </div> </div> <div class="image-1-group"> <img class="image-1-icon1" alt src="image-12@2x.b551f611.png"> <div class="frame-parent3"> <div class="parent1"> <div class="div7">文本标签</div> <div class="type">Type: 变量值</div> </div> <div class="div20"> 通过文字和标签颜色来区分状态，推荐在空间有限的情况下使用 </div> <div class="smallmediumlarge-wrapper"> <div class="default"> <ul class="default1"> 有 “small、medium、large” 三个尺寸 </ul> </div> </div> </div> </div> <div class="image-1-container"> <img class="image-1-icon3" alt src="image-13@2x.3cb67844.png"> <div class="frame-parent5"> <div class="parent2"> <div class="div">带图标的标签</div> <div class="hasicon-true">hasIcon: true</div> </div> <div class="div20"> 需要通过标签来强调内容的状态时，推荐使用带图标的标签 </div> <div class="smallmediumlarge2"> <ul class="default1"> 有 “small、medium、large” 三个尺寸 </ul> </div> <div class="smallmediumlarge2"> <ul class="default1"> 仅默认“default”类型的标签支持图标自定义 </ul> </div> </div> </div> <div class="image-1-group"> <img class="image-1-icon1" alt src="image-14@2x.8d6aa105.png"> <div class="frame-parent3"> <div class="parent3"> <div class="div">可移除的标签</div> <div class="removable-true">removable: true</div> </div> <div class="div20"> 在场景中需要对标签进行移除操作时，使用可移除的标签 </div> <div class="smallmediumlarge4"> <ul class="default1"> 有 “small、medium、large” 三个尺寸 </ul> </div> </div> </div> </div> </div> </article> </body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Source Sans Pro:wght@400;500&display=swap"
+    />
+  </head>
+  <body>
+    <article class="doc-starter">
+      <div class="doc-header">
+        <div class="parent">
+          <div class="div">组件库</div>
+          <img class="arrow-right-icon" alt="" src="./public/arrowright.svg" />
+
+          <div class="div">展示</div>
+          <img class="arrow-right-icon" alt="" src="./public/arrowright.svg" />
+
+          <div class="tag">Tag</div>
+        </div>
+        <div class="group">
+          <div class="div">最新维护：2022-06-02</div>
+          <div class="div">负责人：卢珊</div>
+          <div class="docstatus">
+            <div class="div">✏️ 撰写文档中</div>
+          </div>
+        </div>
+      </div>
+      <div class="doc-defination">
+        <div class="title">
+          <div class="div4">
+            <div class="tag1">标签 Tag</div>
+            <div class="div5">使用标签来标记、分类内容</div>
+          </div>
+          <div class="div6">
+            <img class="link-icon" alt="" src="./public/link.svg" />
+
+            <a
+              class="a"
+              href="https://www.figma.com/file/AItcK3Oz6wngtyKJ6e138e/?node-id=2%3A2"
+              target="_blank"
+              >点击前往组件</a
+            >
+          </div>
+        </div>
+        <div class="component-showcase">
+          <div class="tag-parent">
+            <div class="tag2">
+              <img class="analysis-icon" alt="" src="./public/analysis.svg" />
+
+              <div class="text1">标签</div>
+            </div>
+            <div class="tag3">
+              <img
+                class="delete-2-fill-icon"
+                alt=""
+                src="./public/delete2fill.svg"
+              />
+
+              <div class="text1">执行失败</div>
+            </div>
+            <div class="tag4">
+              <img
+                class="delete-2-fill-icon"
+                alt=""
+                src="./public/infofill.svg"
+              />
+
+              <div class="text1">运行中</div>
+            </div>
+            <div class="tag5">
+              <img
+                class="delete-2-fill-icon"
+                alt=""
+                src="./public/delete2fill1.svg"
+              />
+
+              <div class="text1">已失效</div>
+            </div>
+            <div class="tag6">
+              <img
+                class="delete-2-fill-icon"
+                alt=""
+                src="./public/successfill.svg"
+              />
+
+              <div class="text1">已完成</div>
+            </div>
+            <div class="tag7">
+              <img class="analysis-icon" alt="" src="./public/error2fill.svg" />
+
+              <div class="text1">异常</div>
+            </div>
+          </div>
+        </div>
+        <div class="component-define">
+          <div class="div7">
+            <p class="p">可以使用多个或单个标签对内容进行分类。</p>
+            <p class="p">标签帮助用户快速识别内容，吸引用户注意力。</p>
+          </div>
+        </div>
+      </div>
+      <div class="doc-breakdown">
+        <div class="div8">组件解构</div>
+        <div class="frame-parent">
+          <div class="frame-group">
+            <div class="frame-container">
+              <div class="docnumber-parent">
+                <div class="docnumber">
+                  <img class="oval-icon" alt="" src="./public/oval.svg" />
+
+                  <div class="div9">1</div>
+                </div>
+                <div class="div10">图标（可选）</div>
+              </div>
+              <div class="div11">用于辅助展示标签信息，起强调作用</div>
+            </div>
+            <div class="frame-div">
+              <div class="docnumber-parent">
+                <div class="docnumber">
+                  <img class="oval-icon" alt="" src="./public/oval.svg" />
+
+                  <div class="div9">2</div>
+                </div>
+                <div class="div10">标签内容</div>
+              </div>
+              <div class="div11">标签内容尽可能简短</div>
+            </div>
+            <div class="frame-parent1">
+              <div class="docnumber-parent">
+                <div class="docnumber">
+                  <img class="oval-icon" alt="" src="./public/oval.svg" />
+
+                  <div class="div9">3</div>
+                </div>
+                <div class="div10">关闭按钮 (可选)</div>
+              </div>
+              <div class="div17">可以含有关闭按钮，点击后移除标签</div>
+            </div>
+          </div>
+          <img class="image-1-icon" alt="" src="./public/image-1@2x.png" />
+        </div>
+      </div>
+      <div class="doc-breakdown">
+        <div class="wrapper">
+          <div class="div8">标签的类型</div>
+        </div>
+        <div class="frame-parent2">
+          <div class="image-1-parent">
+            <img class="image-1-icon1" alt="" src="./public/image-11@2x.png" />
+
+            <div class="frame-parent3">
+              <div class="container">
+                <div class="div">标签按语义分类</div>
+                <div class="type-default-danger">
+                  type: default danger info invalid success warning
+                </div>
+              </div>
+              <div class="default">每个标签都需要在特定的场景下使用</div>
+              <div class="default-parent">
+                <div class="default">◆ 无需强调的默认信息使用 default 类型</div>
+                <div class="default">◆ 危险状态使用红色 danger 类型</div>
+                <div class="default">◆ 需强调信息时使用蓝色 info 类型</div>
+                <div class="default">◆ 失效状态使用灰色 invalid 类型</div>
+                <div class="default">◆ 积极状态使用绿色 success 类型</div>
+                <div class="default">◆ 异常状态使用橙色 warning 类型</div>
+              </div>
+            </div>
+          </div>
+          <div class="image-1-group">
+            <img class="image-1-icon1" alt="" src="./public/image-12@2x.png" />
+
+            <div class="frame-parent3">
+              <div class="parent1">
+                <div class="div7">文本标签</div>
+                <div class="type">Type: 变量值</div>
+              </div>
+              <div class="default">
+                通过文字和标签颜色来区分状态，推荐在空间有限的情况下使用
+              </div>
+              <div class="wrapper">
+                <div class="default">◆ 有 “small、medium、large” 三个尺寸</div>
+              </div>
+            </div>
+          </div>
+          <div class="image-1-group">
+            <img class="image-1-icon1" alt="" src="./public/image-13@2x.png" />
+
+            <div class="frame-parent3">
+              <div class="parent2">
+                <div class="div">带图标的标签</div>
+                <div class="hasicon-true">hasIcon: true</div>
+              </div>
+              <div class="default">
+                需要通过标签来强调内容的状态时，推荐使用带图标的标签
+              </div>
+              <div class="default">◆ 有 “small、medium、large” 三个尺寸</div>
+              <div class="default">
+                ◆ 仅默认“default”类型的标签支持图标自定义
+              </div>
+            </div>
+          </div>
+          <div class="image-1-group">
+            <img class="image-1-icon1" alt="" src="./public/image-14@2x.png" />
+
+            <div class="frame-parent3">
+              <div class="parent3">
+                <div class="div">可移除的标签</div>
+                <div class="removable-true">removable: true</div>
+              </div>
+              <div class="default">
+                在场景中需要对标签进行移除操作时，使用可移除的标签
+              </div>
+              <div class="default">◆ 有 “small、medium、large” 三个尺寸</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
+  </body>
+</html>
